--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-plugin-macros": "3.1.0",
     "gatsby": "3.9.1",
     "gatsby-plugin-canonical-urls": "3.9.0",
+    "gatsby-plugin-gatsby-cloud": "^2.9.1",
     "gatsby-plugin-image": "1.9.0",
     "gatsby-plugin-manifest": "3.9.0",
     "gatsby-plugin-mdx": "2.9.0",
