--- a/package.json
+++ b/package.json
@@ -70,10 +70,9 @@
     "eslint-plugin-prettier": "3.4.0",
     "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "husky": ">=6",
+    "lint-staged": ">=10",
     "prettier": "2.3.2",
-    "stylelint": "13.13.1",
-    "stylelint-config-prettier": "8.0.2",
-    "stylelint-config-standard": "22.0.0",
     "tailwindcss": "^2.2.4",
     "typescript": "4.3.5",
     "typescript-plugin-css-modules": "3.4.0"
@@ -96,7 +95,8 @@
     "i18n:add-locale": "lingui add-locale",
     "i18n:extract": "lingui extract",
     "i18n:compile": "lingui compile",
-    "i18n:build": "yarn i18n:extract && yarn i18n:compile"
+    "i18n:build": "yarn i18n:extract && yarn i18n:compile",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -104,5 +104,8 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
+  },
+  "lint-staged": {
+    "*.{tsx,ts}": "eslint --cache --fix"
   }
 }
