--- a/package.json
+++ b/package.json
@@ -11,18 +11,13 @@
     "@lingui/react": "3.10.2",
     "@mdx-js/mdx": "1.6.22",
     "@mdx-js/react": "1.6.22",
-    "@tailwindcss/typography": "0.4.1",
     "autoprefixer": "^10.3.1",
-    "babel-plugin-macros": "3.1.0",
     "gatsby": "3.9.1",
     "gatsby-plugin-canonical-urls": "3.9.0",
     "gatsby-plugin-gatsby-cloud": "^2.9.1",
     "gatsby-plugin-image": "1.9.0",
     "gatsby-plugin-manifest": "3.9.0",
     "gatsby-plugin-mdx": "2.9.0",
-    "gatsby-plugin-netlify": "3.9.0",
-    "gatsby-plugin-netlify-cache": "2.0.0",
-    "gatsby-plugin-offline": "4.9.0",
     "gatsby-plugin-postcss": "4.9.0",
     "gatsby-plugin-preact": "5.9.0",
     "gatsby-plugin-preload-fonts": "2.9.0",
@@ -41,24 +36,20 @@
     "gatsby-transformer-sharp": "3.9.0",
     "make-plural": "6.2.2",
     "postcss": "8.3.5",
-    "postcss-preset-env": "6.7.0",
     "preact": "10.5.14",
     "preact-render-to-string": "^5.1.19",
     "prism-themes": "1.7.0",
     "prismjs": "1.24.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-helmet": "6.1.0",
-    "socket.io-client": "4.1.3"
+    "react-helmet": "6.1.0"
   },
   "devDependencies": {
-    "@babel/core": "7.14.6",
     "@babel/preset-typescript": "^7.14.5",
     "@types/react": "17.0.14",
     "@types/react-helmet": "6.1.2",
     "@typescript-eslint/eslint-plugin": "4.28.3",
     "@typescript-eslint/parser": "4.28.3",
-    "babel-core": "7.0.0-bridge.0",
     "babel-preset-gatsby": "^1.9.0",
     "eslint": "7.30.0",
     "eslint-config-airbnb-typescript": "12.3.1",
@@ -74,6 +65,7 @@
     "lint-staged": ">=10",
     "prettier": "2.3.2",
     "tailwindcss": "^2.2.4",
+    "@tailwindcss/typography": "0.4.1",
     "typescript": "4.3.5",
     "typescript-plugin-css-modules": "3.4.0"
   },
@@ -82,7 +74,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "build": "yarn i18n:build && gatsby build",
+    "build": "gatsby build",
     "develop": "gatsby develop -H 0.0.0.0 -p 8002",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
     "start": "npm run develop",
