--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/typography": "0.4.1",
     "autoprefixer": "10.3.5",
     "babel-plugin-macros": "3.1.0",
+    "babel-plugin-polyfill-corejs2": "^0.4.5",
     "gatsby": "3.14.6",
     "gatsby-plugin-canonical-urls": "3.14.0",
     "gatsby-plugin-gatsby-cloud": "3.2.1",
